@@ -73,7 +73,7 @@ script:
 - python setup.py sdist --formats=zip,gztar,bztar
 - python setup.py bdist_wheel
 # Try installing from the source package (install dependencies via conda first)
-- conda install --yes --quiet "tqdm!=4.15" mpi4py numpy cython scipy matplotlib h5py colorama psutil "qt>=4" libgcc "pyqt >=4" python-blosc
+- conda install --yes --quiet "tqdm!=4.15" mpi4py numpy cython scipy matplotlib h5py colorama psutil "qt>=4" libgcc "pyqt >=4" python-blosc statsmodels
 - pip install dist/*.tar.gz
 - spyking-circus -h
 - pip uninstall -y -q spyking-circus
