@@ -11,6 +11,7 @@ Release 0.6.8
 * addition of the statsmodels dependency
 * remove the max_cluster parameter
 * reduction of the size for saved clusters
+* more robust selection of the centroids, getting rid of the max_clusters parameter
 
 =============
 Release 0.6.7
